# nas-monitor

./: .env-example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  compose.yml  nas-monitor.service  pyproject.toml  run.sh  send.sh  setup-service.sh
front/: .pnp.cjs  Dockerfile  README.md  package-lock.json  package.json  quasar.config.js
front/src/: App.vue
front/src/components/: ConnectionOverlay.vue  DeviceDetailDialog.vue  DiskUsageWidget.vue  MetricBaseWidget.vue  MetricsPanel.vue  NetworkWidget.vue  PanelSettingsDialog.vue  SystemInfoDialog.vue  SystemMetricsWidget.vue  ZPoolWidget.vue  ZfsDiskWidget.vue
front/src/layouts/: MainLayout.vue
front/src/pages/: IndexPage.vue
front/src/services/: api.js
front/src/stores/: deviceStore.js
nas_monitor/: __main__.py  alerting.py  api_router.py  collectors.py  config.py  device_inventory.py  frontend_config.py  main.py  manager.py  metrics.py  models.py  shemas.py  storage_monitor.py
nas_monitor/alerting/: __init__.py  base.py  engine.py
nas_monitor/alerting/checkers/: cpu.py  ram.py  storage.py  zfs.py
nas_monitor/alerting/templates/: cpu_load.md  cpu_temp.md  ram_temp.md  ram_usage.md  storage_smart.md  storage_temp.md  zfs_usage.md
nas_monitor/senders/: base.py  manager.py
nas_monitor/senders/providers/: telegram.py
nas_monitor/tests/: test_alerting.py  test_disk_utils.py  test_senders.py
nas_monitor/utils/: disk_utils.py  system_info.py
scripts/: nas-monitor.service  remove-service.sh  setup-service.sh
