[project]
name = "smart-monitor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.24.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "psutil>=7.2.1",
    "pydantic-settings>=2.0.0",
    "tortoise-orm>=0.25.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
